Fixed the blog overlap issue

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -201,6 +201,10 @@ p {
 	.box {
 		margin-bottom: 1.5rem;
 	}
+
+	.section {
+		padding-bottom: 10rem;
+	}
 	
 	.image {
 		margin-bottom: 1rem;
